# Triangles_Intersection_in3D

./: CMakeLists.txt  Loader.cpp  Loader.h  Octotree.h  README.md  Space.h  geometry.h  main.cpp  test2.txt  test3.txt  test4.txt  test5.txt
Intersection_Geometry/: Octotree.cpp  Octotree.h  Space.cpp  Space.h  geometry.cpp  geometry.h
Vulkan/: Info.h  camera.h  driver.cpp  driver.h
Vulkan/shaders/: shader.vert  vert.spv
tests/: rotate_test3.txt  test1.txt  test10000.txt  test3.txt
